Fixes #3651 : Profile photo aligned after reducing margin to 0px

--- a/static/css/impala/users.less
+++ b/static/css/impala/users.less
@@ -50,7 +50,7 @@
 .html-rtl .prettyform {
     .avatar,
     li.profile-photo a.delete {
-        margin-right: 137px;
+        margin-right: 0px;
         margin-left: 0;
     }
 }
